# xblog

./: .gitignore  AGENT.md  AGENTS.md  CONTRIBUTING.md  README.md  llms.txt
backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_xblog_initial.py  002_user_last_login.py  003_user_avatar.py  004_site_settings.py  005_ai_tables.py  006_auth_oauth_reset.py  007_phone_sms_auth.py  008_ai_skill_default_builtin.py  009_user_is_active.py  010_user_nickname.py  011_user_profile_fields.py  012_audit_logs.py  013_friend_link_description.py  014_post_pinned.py
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: auth_cookies.py  auth_session.py  deps.py
backend/app/core/: __init__.py  config.py  constants.py  exceptions.py  openapi.py  response.py  security.py  timezone.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  ai_provider.py  ai_skill.py  ai_usage_log.py  base.py  friend_link.py  login_log.py  operation_log.py  page.py  page_view.py  password_reset_token.py  (+4 more)
backend/tests/: conftest.py  test_admin_post_stats.py  test_admin_users.py  test_ai_api.py  test_ai_chat.py  test_ai_crypto.py  test_ai_skills_validate.py  test_auth_email.py  test_auth_login.py  test_auth_logout.py  test_auth_oauth.py  test_auth_profile.py  test_auth_sms.py  test_health.py  test_login_guard.py  test_post_cover.py  test_post_neighbors.py  test_post_pinned.py  test_post_tags.py  test_posts_per_page.py  test_public_posts.py  test_search.py  test_upload_cleanup.py
(+255 files in other folders)
