[project]
name = "xblog-api"
version = "0.1.0"
description = "FastAPI 项目（由 create-fastapi 生成）。"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.1,<1.0.0",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.39,<1.0.0",
    "greenlet>=3.5.3",
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
    "Jinja2>=3.1.6,<4.0.0",
    "pyjwt>=2.9",
    "bcrypt>=4.0",
    "markdown>=3.7",
    "pygments>=2.18",
    "python-multipart>=0.0.9",
    "httpx>=0.28",
    "tzdata>=2024.1",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "aiosqlite>=0.20",
]

[tool.ruff]
line-length = 120
target-version = "py314"
exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["app", "alembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
package = false
index-url = "https://mirrors.tencent.com/pypi/simple/"

[tool.fastapi]
entrypoint = "app.main:app"
